Add responsive images

--- a/source/less/custom.less
+++ b/source/less/custom.less
@@ -98,6 +98,10 @@ h1 {
 	background-attachment: fixed;
 	transition: background-image 1s linear;
 
+	@media (max-width: @screen-xs-max) {
+		background-image: url(../images/london-1-small.jpg);
+	}
+
 	header {
 		position: absolute;
 		top: 50%;
