--- a/themes/dev/assets/scss/_colors.scss
+++ b/themes/dev/assets/scss/_colors.scss
@@ -1,6 +1,7 @@
 // Colors
 $white: #fefefe !default;
 $black: #323232 !default;
+$grey: #6c757d !default;
 $bg-color: $white !default;
 $fg-color: $black !default;
 $alt-bg-color: #dcdcdc !default;
