--- a/layouts/_default/cv.html
+++ b/layouts/_default/cv.html
@@ -18,6 +18,17 @@
 
         {{ end }}
     </section>
+
+    <section>
+        <h2>Education</h2>
+        <hr>
+
+        {{ range sort $.Site.Data.cv.education "weight" }}
+
+            {{ partial "cv/education.html" . }}
+
+        {{ end }}
+    </section>
 </div>
 
 {{ end }}
