--- a/themes/dev/assets/scss/_base.scss
+++ b/themes/dev/assets/scss/_base.scss
@@ -6,6 +6,7 @@
 
 html {
   box-sizing: border-box;
+  font-size: 16px;
 }
 
 body {
@@ -13,6 +14,9 @@ body {
   background-color: $bg-color;
   font-family: 'Fira Mono', monospace;
   min-height: 100vh;
+  display: grid;
+  grid-template-rows: 1fr auto;
+  align-items: center;
 }
 
 a {
@@ -38,28 +42,59 @@ h6 {
 }
 
 h1 {
-  font-size: 2.8rem;
-  line-height: 2.8rem;
-}
-h2 {
   font-size: 2.2rem;
   line-height: 2.2rem;
+  @media (min-width : $breakpoint-lg) {
+    font-size: 2.8rem;
+    line-height: 2.8rem;
+  }
 }
-h3 {
+h2 {
   font-size: 1.8rem;
   line-height: 1.8rem;
+  @media (min-width : $breakpoint-lg) {
+    font-size: 2.2rem;
+    line-height: 2.2rem;
+  }
+}
+h3 {
+  font-size: 1.5rem;
+  line-height: 1.5rem;
+  @media (min-width : $breakpoint-lg) {
+    font-size: 1.8rem;
+    line-height: 1.8rem;
+  }
 }
 h4 {
-  font-size: 1.6rem;
-  line-height: 1.6rem;
-}
-h5 {
   font-size: 1.4rem;
   line-height: 1.4rem;
+  @media (min-width : $breakpoint-lg) {
+    font-size: 1.6rem;
+    line-height: 1.6rem;
+  }
 }
-h6 {
+h5 {
   font-size: 1.2rem;
   line-height: 1.2rem;
+  @media (min-width : $breakpoint-lg) {
+    font-size: 1.4rem;
+    line-height: 1.4rem;
+  }
+}
+h6 {
+  font-size: 1.0rem;
+  line-height: 1.0rem;
+  @media (min-width : $breakpoint-lg) {
+    font-size: 1.2rem;
+    line-height: 1.2rem;
+  }
+}
+
+ul {
+  padding-left: 1.5rem;
+  @media (min-width : $breakpoint-lg) {
+    padding-left: 2.5rem;
+  }
 }
 
 pre {
