--- a/themes/dev/assets/scss/_cv.scss
+++ b/themes/dev/assets/scss/_cv.scss
@@ -7,6 +7,7 @@ section > h2 {
     .heading {
         h3 {
             margin: 0;
+            line-height: 1.5rem;
         }
         .position {
             // color: $grey;
@@ -22,12 +23,13 @@ section > h2 {
         }
         .dates {
             margin-top: 0;
+            margin-bottom: 0.5rem;
         }
     }
     .desc {
-        margin: 1rem auto;
-        li {
-            margin-bottom: 0.5rem;
+        margin: 0.7rem auto;
+        ul {
+            margin-top: 0.5rem;
         }
         h4 {
             text-transform: none;
@@ -50,9 +52,6 @@ section > h2 {
         .heading {
             display: flex;
             justify-content: space-between;
-            h3 {
-                margin-bottom: 0.5rem;
-            }
             .company {
                 margin-right: 0.5rem;
             }
