--- a/themes/dev/assets/scss/_colors.scss
+++ b/themes/dev/assets/scss/_colors.scss
@@ -6,5 +6,7 @@ $bg-color: $white !default;
 $fg-color: $black !default;
 $alt-bg-color: #dcdcdc !default;
 $alt-fg-color: #000 !default;
-$primary-color: #bd5d38 !default;
-$link-color: #3366CC !default;
+$primary-color: #a02828 !default;
+// $primary-color: #1c887a !default;
+// $primary-color: #3c588c !default;
+$link-color: $primary-color;
