--- a/themes/dev/assets/scss/_cv.scss
+++ b/themes/dev/assets/scss/_cv.scss
@@ -27,7 +27,7 @@ section > h2 {
         }
     }
     .desc {
-        margin: 0.7rem auto;
+        margin: 1.0rem auto;
         ul {
             margin-top: 0.5rem;
         }
@@ -40,6 +40,16 @@ section > h2 {
         }
         p {
             margin-top: 0.2rem;
+        }
+    }
+}
+.interests {
+    li {
+        position: relative;
+        padding-left: 1.5rem;
+        svg {
+            position: absolute;
+            left: 0;
         }
     }
 }
@@ -56,10 +66,10 @@ section > h2 {
                 margin-right: 0.5rem;
             }
             .position {
-                font-size: 1.4rem;
+                font-size: 1.3rem;
             }
             .location {
-                font-size: 1.4rem;
+                font-size: 1.3rem;
                 display: inline;
             }
             .dates {
