--- a/themes/dev/assets/scss/_home.scss
+++ b/themes/dev/assets/scss/_home.scss
@@ -7,6 +7,7 @@
             width: 10rem;
             height: auto;
             border-radius: 50%;
+            border: .1rem solid $black;
         }
     }
     h1 {
