--- a/themes/dev/assets/scss/_navigation.scss
+++ b/themes/dev/assets/scss/_navigation.scss
@@ -9,6 +9,7 @@
     img {
       width: 10rem;
       height: auto;
+      border: .5rem solid rgba(255,255,255,.2);
       border-radius: 50%;
     }
   }
