--- a/themes/dev/assets/scss/_base.scss
+++ b/themes/dev/assets/scss/_base.scss
@@ -24,10 +24,10 @@ a {
   font-weight: 700;
   color: $alt-fg-color;
   text-decoration: none;
-/*   &:focus,
+  &:focus,
   &:hover {
-    text-decoration: underline;
-  } */
+    color: $link-color;
+  }
 }
 
 h1,
