--- a/themes/dev/layouts/_default/baseof.html
+++ b/themes/dev/layouts/_default/baseof.html
@@ -34,12 +34,7 @@
     <link rel="icon" type="image/png" href="{{ "/images/favicon-32x32.png" | relURL }}" sizes="31x32">
     <link rel="icon" type="image/png" href="{{ "/images/favicon-16x16.png" | relURL }}" sizes="14x16">
 
-    {{ if .RSSLink }}
-      <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
-      <link href="{{ .RSSLink }}" rel="feed" type="application/rss+xml" title="{{ .Site.Title }}" />
-    {{ end }}
-
-    {{ .Hugo.Generator }}
+    {{ hugo.Generator }}
   </head>
 
   <body>
