--- a/themes/dev/layouts/partials/footer.html
+++ b/themes/dev/layouts/partials/footer.html
@@ -2,5 +2,16 @@
   {{ with .Site.Params.footercontent }}
     <p>{{.}}</p>
   {{ end }}
-  {{ if not .Site.Params.hideCopyright }} © {{ .Site.LastChange.Format "2006" }} {{ end }} {{ if not .Site.Params.hideCredits}} {{ if not .Site.Params.hideCopyright }} · {{ end }} Powered by <a href="https://gohugo.io/">Hugo</a> & <a href="https://github.com/luizdepra/hugo-coder/">Coder</a>. {{ end }}
+  {{ if not .Site.Params.hideCopyright }}
+    ©
+    {{ if (and (.Site.Params.since) (lt .Site.Params.since now.Year)) }}
+      {{ .Site.Params.since }} -
+    {{ end }}
+    {{ now.Year }}
+    {{ with .Site.Params.author }} {{ . }} {{ end }}
+  {{ end }}
+  {{ if not .Site.Params.hideCredits }}
+    {{ if not .Site.Params.hideCopyright }} · {{ end }}
+    Powered by <a href="https://gohugo.io/">Hugo</a> & <a href="https://github.com/luizdepra/hugo-coder/">Coder</a>.
+  {{ end }}
 </footer>
