--- a/src/_includes/partials/_header.njk
+++ b/src/_includes/partials/_header.njk
@@ -1,11 +1,11 @@
 <header class="border-b-2 border-gray-100" role="navigation" aria-label="main navigation">
-    <nav class="container flex justify-between mx-auto py-6">
+    <nav class="container flex justify-between py-6">
         <div>
-            <a href="/" class="font-semibold">{{site.title}}</a>
+            <a href="/" class="text-medium md:text-xl">{{site.title}}</a>
         </div>
         <div class="flex">
-            <a href="/posts" class="text-gray-700 hover:text-gray-900 mx-6">Posts</a>
-            <a href="/about" class="text-gray-700 hover:text-gray-900 mx-6">About</a>
+            <a href="/posts" class="md:text-lg text-gray-700 hover:text-gray-900 mx-6">Posts</a>
+            <a href="/about" class="md:text-lg text-gray-700 hover:text-gray-900">About</a>
         </div>
     </nav>
 </header>
