--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>{{site.title}} - {{title}}</title>
+  <title>{{title}} - {{site.title}}</title>
   <meta name="description" content="{{site.description}}">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,18 +14,17 @@
   <meta property="og:image" content="">
 
   <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
+  <link rel="icon" type="image/png" href="{{ '/assets/img/favicon-32x32.png' | url }}" sizes="32x32">
+  <link rel="icon" type="image/png" href="{{ '/assets/img/favicon-16x16.png' | url }}" sizes="16x16">
+  <link rel="apple-touch-icon" href="{{ '/assets/img/favicon-32x32.png' | url }}">
 
   <link rel="stylesheet" href="{{ '/assets/css/main.css' | url }}">
 </head>
 
 <body class="flex flex-col min-h-screen">
     {% include "partials/_header.njk" %}
-    <main class="flex-grow container mx-auto py-6">
-        <article class="prose lg:prose-xl">
-            {{content | safe}}
-        </article>
+    <main class="flex-grow container max-w-prose py-6">
+        {{content | safe}}
     </main>
     {% include "partials/_footer.njk" %}
 </body>
