--- a/src/_includes/partials/_header.njk
+++ b/src/_includes/partials/_header.njk
@@ -4,7 +4,7 @@
             <a href="/" class="text-medium md:text-xl">{{site.title}}</a>
         </div>
         <div class="flex">
-            <a href="/posts" class="md:text-lg text-gray-700 hover:text-gray-900 mx-6">Posts</a>
+            <a href="/blog" class="md:text-lg text-gray-700 hover:text-gray-900 mx-6">Blog</a>
             <a href="/about" class="md:text-lg text-gray-700 hover:text-gray-900">About</a>
         </div>
     </nav>
