--- a/src/_layouts/about.njk
+++ b/src/_layouts/about.njk
@@ -3,7 +3,4 @@ layout: base
 ---
 
 {% include "partials/_profile.njk" %}
-
-<article class="mt-10 md:mt-16 mx-auto prose lg:prose-lg">
-{{content | safe}}
-</article>
+{% include "partials/_prose.njk" %}
