--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -18,6 +18,7 @@
   <link rel="icon" type="image/png" href="{{ '/assets/img/favicon-16x16.png' | url }}" sizes="16x16">
   <link rel="apple-touch-icon" href="{{ '/assets/img/favicon-32x32.png' | url }}">
 
+  <link rel="stylesheet" href="{{ '/assets/css/prism.css' | url }}" />
   <link rel="stylesheet" href="{{ '/assets/css/main.css' | url }}">
 </head>
 
