Several improvements to design

--- a/src/_layouts/about.njk
+++ b/src/_layouts/about.njk
@@ -3,4 +3,6 @@ layout: base
 ---
 
 {% include "partials/_profile.njk" %}
-{% include "partials/_prose.njk" %}
+<div class="mt-10 mx-auto prose lg:prose-lg">
+    {{content | safe}}
+</div>
