--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -24,7 +24,7 @@
 
 <body class="flex flex-col min-h-screen">
     {% include "partials/_header.njk" %}
-    <main class="flex-grow container max-w-prose py-6">
+    <main class="flex-grow container py-6">
         {{content | safe}}
     </main>
     {% include "partials/_footer.njk" %}
