--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -13,7 +13,7 @@
     @apply text-lg;
   }
   a {
-    @apply text-blue-600 hover:underline decoration-2 underline-offset-4;
+    @apply text-blue-600 hover:underline decoration-[3px] underline-offset-[5px];
   }
 }
 
