--- a/src/_includes/partials/_header.njk
+++ b/src/_includes/partials/_header.njk
@@ -1,7 +1,7 @@
 <header class="border-b-2 border-gray-100" role="navigation" aria-label="main navigation">
     <nav class="container flex justify-between py-6">
         <div>
-            <a href="/" class="text-medium md:text-xl">{{site.title}}</a>
+            <a href="/" class="text-lg md:text-xl">{{site.title}}</a>
         </div>
         <div class="flex">
             <a href="/blog" class="md:text-lg text-gray-700 hover:text-gray-900 mx-6">Blog</a>
