--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -30,4 +30,12 @@
     {% include "partials/_footer.njk" %}
 </body>
 
+<script>
+  // obfuscate email
+  // (see: https://css-tricks.com/how-to-safely-share-your-email-address-on-a-website/)
+  var encEmail = "{{site.email | b64Encode}}";
+  const contact = document.getElementById("contact-email");
+  contact.setAttribute("href", "mailto:".concat(atob(encEmail)));
+</script>
+
 </html>
