--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -6,12 +6,15 @@
     @apply lg:text-5xl;
     @apply font-extrabold;
   }
+
   h2 {
     @apply text-xl;
   }
+
   h3 {
     @apply text-lg;
   }
+
   a {
     @apply text-blue-600 hover:underline decoration-[3px] underline-offset-[5px];
   }
@@ -19,4 +22,9 @@
 
 @tailwind components;
 @tailwind utilities;
- 
+
+/* Override prism theme */
+code[class*="language-"],
+pre[class*="language-"] {
+  font-size: 1rem;
+}
