Make code font size slightly smaller on mobile

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -26,5 +26,13 @@
 /* Override prism theme */
 code[class*="language-"],
 pre[class*="language-"] {
-  font-size: 1rem;
+  font-size: 0.875em;
+}
+
+@media (min-width: 1024px) {
+
+  code[class*="language-"],
+  pre[class*="language-"] {
+    font-size: 1rem;
+  }
 }
