--- a/src/_includes/partials/_header.njk
+++ b/src/_includes/partials/_header.njk
@@ -3,9 +3,10 @@
         <div>
             <a href="/" class="text-lg md:text-xl">{{site.title}}</a>
         </div>
-        <div class="flex">
-            <a href="/blog" class="md:text-lg text-gray-700 hover:text-gray-900 mx-6">Blog</a>
-            <a href="/about" class="md:text-lg text-gray-700 hover:text-gray-900">About</a>
+        <div class="flex gap-6">
+            {% for item in site.navigation %}
+                <a href="{{ item.url }}" class="md:text-lg text-gray-700 {% if item.url == page.url %}text-blue-600 font-semibold{% endif %}">{{ item.title }}</a>
+            {% endfor %}
         </div>
     </nav>
 </header>
