--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -16,7 +16,7 @@
   }
 
   a {
-    @apply text-blue-600 hover:underline decoration-[3px] underline-offset-[5px];
+    @apply text-blue-600 hover:underline hover:text-blue-600 decoration-[3px] underline-offset-[5px];
   }
 }
 
